@@ -57,13 +57,18 @@ Restrict the scancel operation to jobs with this job name.
 Restrict the scancel operation to jobs in this partition.
 
 .TP
-\fB\-p\fR, \fB\-\-qos\fR=\fIqos\fR
+\fB\-q\fR, \fB\-\-qos\fR=\fIqos\fR
 Restrict the scancel operation to jobs with this quality of service.
 
 .TP
 \fB\-Q\fR, \fB\-\-quiet\fR
 Do not report an error if the specified job is already completed.
 This option is incompatible with the \fB\-\-verbose\fR option.
+
+
+.TP
+\fB\-R\fR, \fB\-\-reservation\fR=\fIreservation_name\fR
+Restrict the scancel operation to jobs with this reservation name.
 
 .TP
 \fB\-s\fR, \fB\-\-signal\fR=\fIsignal_name\fR
