@@ -18,6 +18,10 @@ documents those changes that are of interest to users and admins.
  -- Fix setting derived exit code correctly for jobs that happen to have the
     same jobid.
  -- Better checking for time overflow when rolling up in accounting.
+ -- Add scancel --reservation option to cancell all jobs associated with a
+    specific reservation.
+ -- Treat reservation with no nodes like one that starts later (let jobs of any
+    size get queued).
 
 * Changes in SLURM 2.2.0
 ========================
@@ -797,6 +801,7 @@ documents those changes that are of interest to users and admins.
 =========================
  -- Correct format of --begin reported in salloc, sbatch and srun --help
     message.
+ -- Correct logic for regular users to increase nice value of their own jobs.
 
 * Changes in SLURM 2.1.16
 =========================
